# redoxi_action_flow

./: .clang-format  .cursorrules  .env  .gitignore  .gitmodules  CLAUDE.md  TODO.md  bash-config  build_common.sh  build_node.sh  build_stream_worker.sh  c_cpp_properties.json  git_merge.sh  git_push.sh  match_count_event_v3_with_only_event.py  pixi.toml  read_yaml.py  readme.md  readme.txt  v6d_export_envs.sh  v6d_show_objects.sh  xbuild_working_nodes.sh  xbuild_working_nodes_cx.sh  xclean_build_install.sh  xenable_cycleonedds.sh  xenable_display.bash  xenable_shm_cyclonedds.bash  xenable_shm_fastdds.bash  xenable_v6d.bash  xenv_v6d.sh  xloc.bash  xstart_iox_roudi.bash  xstart_rosboard.bash  xstart_v6d.sh  xupdate_python_path.bash
src/common/redoxi_basic_cpp/: CMakeLists.txt  package.xml
src/common/redoxi_common_cpp/: CMakeLists.txt  package.xml
src/common/redoxi_common_cpp/garbage/: redoxi_v6d.cpp
src/common/redoxi_common_cpp/src/: redoxi_common_cpp.cpp  redoxi_ros_util.cpp  redoxi_v6d.cpp
src/common/redoxi_common_nodes/: CMakeLists.txt  package.xml
src/common/redoxi_common_nodes/src/: AsyncActionInputPort.cpp  AsyncActionOutputPort.cpp  redoxi_common_nodes.cpp  redoxi_common_nodes_components.cpp
src/common/redoxi_extern_cpp/: CMakeLists.txt  package.xml
src/common/redoxi_extern_cpp/src/: redoxi_extern_cpp.cpp
src/common/redoxi_inference/: CMakeLists.txt
src/common/redoxi_inference_onnx/: CMakeLists.txt  package.xml
src/common/redoxi_inference_onnx/src/: OnnxInferenceInOutData.cpp  OnnxModelInference.cpp  OnnxPortData.cpp  redoxi_inference_onnx.cpp
src/common/redoxi_inference_rknn/: CMakeLists.txt  package.xml
src/common/redoxi_inference_rknn/src/: RknnModelInference.cpp  RknnPortData.cpp  redoxi_inference_rknn.cpp  rknn_utils.cpp
src/common/redoxi_public_msgs/: CMakeLists.txt  package.xml
src/common/redoxi_public_msgs/action/: ProcessBodyPoses.action  ProcessBodyPosesByDets.action  ProcessDetections.action  ProcessDetectionsByFrame.action  ProcessFrame.action  ProcessKeypointsByDets.action  ProcessTrackByDetection.action
src/common/redoxi_public_msgs/msg/: Box2.msg  Control.msg  Detection.msg  Frame.msg  FrameDeviceTag.msg  FrameMetadata.msg  Keypoints.msg  MultiDeviceFrame.msg  ProcessBodyPosesGoal.msg  ProcessDetectionsByFrameGoal.msg  ProcessDetectionsGoal.msg  ProcessFrameGoal.msg  ProcessKeypointsByDetsGoal.msg  ProcessTrackByDetectionGoal.msg  ProcessTrackedObjectsGoal.msg  ReturnResponse.msg  SemanticIdentity.msg  SharedMemoryToken.msg  TensorMetadata.msg  TrackObjectStatus.msg  TrackTarget.msg  readme.md
src/common/redoxi_ros_logging/: CMakeLists.txt  package.xml
src/common/redoxi_ros_logging/src/: redoxi_ros_logging.cpp
src/common/redoxi_samples_nodes/: CMakeLists.txt  package.xml
src/common/redoxi_shared_memory/: CMakeLists.txt  package.xml
src/common/redoxi_shared_memory/src/: ExpirationCache.cpp  SharedMemoryFactory.cpp  SharedMemoryManager.cpp
src/common/redoxi_video_reader/: CMakeLists.txt  package.xml
src/common/redoxi_video_reader/src/: FFmpegVideoReader.cpp  FrameRelayPublisher.cpp  RandomFrameVideoGenerator.cpp  RandomFrameVideoReader.cpp  ShmVideoReaderBase.cpp  ShmVideoReaderBase.cpp.bak  SimpleActionGenerator.cpp  VideoReaderBase.cpp  VideoReaderBaseTypes.cpp  VideoReaderBaseTypes_v2.cpp  VideoReaderBase_v2.cpp  VideoSourceFromUrl.cpp  redoxi_video_reader.cpp  redoxi_video_reader_components.cpp
src/common/redoxi_video_reader/useless/: VideoReaderBase.cpp.bak  VideoReaderBase.hpp.bak  VideoReaderBaseImpl.hpp.bak  VideoReaderBaseImpl_v6d.hpp.bak  VideoReaderBaseTypes.cpp.bak
src/common/redoxi_video_reader_base/: CMakeLists.txt  package.xml
src/common/redoxi_video_reader_base/src/: RandomFrameVideoReader.cpp  VideoReaderBase.cpp  VideoReaderBaseTypes.cpp  redoxi_video_reader_base.cpp  redoxi_video_reader_types.cpp
src/common/stream_worker/: CMakeLists.txt  package.xml
src/core/redoxi_shared_memory/: package.xml
src/core/redoxi_shared_memory/src/: redoxi_shared_memory.cpp
src/example/basic_example_cpp/: CMakeLists.txt  package.xml
src/example/test_cx/: CMakeLists.txt  package.xml
src/example/test_cx/launch/: lch_v2_master_node.py  lch_v2_psg_counter_from_video.py  lch_v2_psg_counter_from_video_by_config.py  lch_v2_psg_counter_from_video_by_config_driver.py  lch_v2_psg_counter_from_video_hz_cppdet.py  lch_v2_psg_counter_from_video_hz_cppdet_driver.py  lch_v2_psg_counter_from_video_person_cppdet_driver.py  lch_v2_psg_cppdet_from_video_by_config.py  lch_v2_psg_detector.py  lch_v2_psg_frame_det_source_sink.py  lch_v2_psg_master_node_from_video_by_config.py  lch_v2_psg_person_generator.py  lch_v2_psg_person_generator_from_orbbec.py  lch_v2_psg_pose_detector.py  lch_v2_psg_pose_detector_from_detector.py  lch_v2_psg_pose_detector_from_orbbec.py  lch_v2_psg_pose_detector_only.py  lch_v2_psg_tracker_from_orbbec.py  lch_v2_psg_tracker_from_video.py  lch_v2_psg_tracker_source_sink.py  lch_v2_video2master.py
src/example/test_cx/src/: onnx_inference_api.cpp  test_private_msgs.cpp  test_public_msgs.cpp  test_v6d_plugin.cpp  test_video_sink.cpp  v2_document_sink.cpp  v2_json_examples.cpp  v2_orbbec_video_source.cpp  v2_psg_all_detector_cpp.cpp  v2_psg_all_detector_cpp_driver.cpp  v2_psg_counter.cpp  v2_psg_detector.cpp  v2_psg_detector_driver.cpp  v2_video_sink.cpp  (+12 more)
src/example/test_tracking/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/example/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/master_node/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/my_msgs/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/pg_for_ros2/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/pose_detector/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/psg_collector/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/psg_count/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/psg_public_msgs/: CMakeLists.txt  package.xml
src/flow_ros2_pipeline/test_v6d/: CMakeLists.txt  array_two_clients_test.cpp  client1.py  client2.py  client3.py  client_cpp.cpp  img_test.cpp  img_test.py  tensor_test.cpp
(+1078 files in other folders)
