<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redoxi_basic_cpp</name>
  <version>0.0.0</version>
  <description>Basic c++ utilities which does NOT depend on any custom packages, only depends on system or 3rd party libraries</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>json_struct</depend>

  <depend>libboost-dev</depend>
  <depend>libfmt-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
