<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redoxi_common_nodes</name>
  <version>0.0.0</version>
  <description>Common node utilities for Redoxi Video Processing Library</description>
  <maintainer email="igamenovoer@xx.com">igamenovoer</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>redoxi_common_cpp</depend>
  <depend>json_struct</depend>
  <depend>cv_bridge</depend>
  <depend>redoxi_cmake_utils</depend>

  <depend>libboost-dev</depend>
  <depend>nlohmann-json3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
